# whafer

./: README.md  pyproject.toml  requirements.txt
src/whafer/: costanti.py  db.py  integrita.py  interfacce.py  main.py  progetti.py  whafer.py
tests/: test_integrita.py
