[project]
name = "WhaFeR"
description = "WhaFeR - WhatsApp Forensic Reporter"
version = "0.2.1"
authors = [
    {name = "Francesco Palmisano", email = "f.palmisano42@studenti.uniba.it"}
]

dependencies = [
    "customtkinter",
    "Pillow",
    "pandas",
    "pandastable",
    "SQLAlchemy",
    "wa-crypt-tools",
    "reportlab",
    "rfc3161ng"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
whafer-gui = "whafer.main:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"whafer.assets" = ["*.png"]
